# fde-technical-screen

./: .gitignore  README.md  cli.py  pyproject.toml
src/: main.py
tests/: test_sort.py
