[project]
name = "fde-technical-screen"
version = "0.1.0"
description = ""
authors = [
    {name = "Lui Rodriguez"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^24.4.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.pytest]
pythonpath = ["."]

